--- a/app/src/main/res/layout/activity_game_win.xml
+++ b/app/src/main/res/layout/activity_game_win.xml
@@ -58,34 +58,63 @@
 
         </RelativeLayout>
 
-        <LinearLayout
+<!--        <LinearLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="0dp"-->
+<!--            android:layout_weight="3"-->
+<!--            android:orientation="vertical"-->
+<!--            android:gravity="center|top">-->
+
+<!--            <ImageView-->
+<!--                android:id="@+id/play_again"-->
+<!--                android:layout_width="180dp"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:src="@drawable/selector_playagain"-->
+<!--                android:onClick="toCollectGame"-->
+<!--                android:contentDescription="to collect game"-->
+<!--                android:adjustViewBounds="true"-->
+<!--                android:layout_marginTop="30dp"/>-->
+
+<!--            <ImageView-->
+<!--                android:id="@+id/main_button"-->
+<!--                android:layout_width="180dp"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:src="@drawable/selector_main"-->
+<!--                android:onClick="toMain"-->
+<!--                android:scaleType="centerCrop"-->
+<!--                android:contentDescription="to main"-->
+<!--                android:adjustViewBounds="true"/>-->
+
+<!--        </LinearLayout>-->
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="3"
-            android:orientation="vertical"
-            android:gravity="center|top">
+            android:layout_weight="3">
+
 
             <ImageView
                 android:id="@+id/play_again"
                 android:layout_width="180dp"
                 android:layout_height="wrap_content"
-                android:src="@drawable/selector_playagain"
-                android:onClick="toCollectGame"
-                android:contentDescription="to collect game"
+                android:clickable="true"
                 android:adjustViewBounds="true"
-                android:layout_marginTop="30dp"/>
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="10dp"
+                android:src="@drawable/button_playagain"
+                android:contentDescription="to play again"/>
 
             <ImageView
                 android:id="@+id/main_button"
                 android:layout_width="180dp"
                 android:layout_height="wrap_content"
-                android:src="@drawable/selector_main"
-                android:onClick="toMain"
-                android:scaleType="centerCrop"
-                android:contentDescription="to main"
-                android:adjustViewBounds="true"/>
+                android:layout_marginTop="85dp"
+                android:adjustViewBounds="true"
+                android:layout_centerHorizontal="true"
+                android:clickable="true"
+                android:src="@drawable/button_main"
+                android:contentDescription="to main"/>
 
-        </LinearLayout>
+        </RelativeLayout>
 
     </LinearLayout>
 
